--- a/102-RAD-seq.Rmd
+++ b/102-RAD-seq.Rmd
@@ -499,3 +499,37 @@ srun -p high -t 3:00:00 --mem=32G --nodes=1 $HOME/angsd/angsd -P 16  \
 -doIBS 1 -doCounts 1 -doCov 1 -makeMatrix 1 -minMaf 0.05 \
 -out outputs/102/76-ibs > outputs/102/76-ibs.out 2> outputs/102/76-ibs.err &
 ```
+
+```{r}
+pcm<-wang %>% filter(Pop %in% c("INA","MAL","THA"))
+m <- as.matrix(read.table("outputs/102/76-ibs.covMat"))
+eig <- eigen(m)
+var<-eig$values/sum(eig$values)
+cumvar<-cumsum(eig$values)/sum(eig$values)
+
+head(var)
+head(cumvar)
+```
+
+
+```{r}
+covs<-eig$vectors[,1:3] %>% as_tibble() %>% bind_cols(pcm) 
+
+text12<-covs %>% select(Run, Pop, V1, V2) %>%
+  group_by(Pop) %>% summarize(Count=n(), x=mean(V1), y=mean(V2))
+
+ggplot(covs) +
+  geom_point(aes(x=V1, y=V2, fill=Pop), pch=21, alpha=0.75) +
+  geom_text_repel(data=text12, aes(x=x, y=y, label=Pop), max.overlaps = Inf) +
+  xlab(paste("PC1", " ", round((100*var[1]),2), "%", sep = "")) +
+  ylab(paste("PC2", " ", round((100*var[2]),2), "%", sep = "")) +
+  theme_bw() +
+  theme(panel.grid=element_blank()) +
+  scale_fill_viridis_d(option="magma") 
+```
+
+	-> Number of sites retained after filtering: 13000      
+
+Yep.    
+
+
