--- a/102-RAD-seq.Rmd
+++ b/102-RAD-seq.Rmd
@@ -429,6 +429,8 @@ The wang df is 130 samples, expecting 131.
 write_csv(wang, file="meta/wang.csv")
 
 write_tsv(wang %>% select(Path), col_names = FALSE, file="bamlists/130.bamlist")
+
+wang %>% group_by(Pop) %>% summarize(Count=n())
 ```
 
 How does a single chrom look?
@@ -444,6 +446,7 @@ srun -p high -t 3:00:00 --mem=32G --nodes=1 $HOME/angsd/angsd -P 16  \
 ```
 
 11771 snps on chrom01    
+
 ```{r}
 pcm<-wang
 m <- as.matrix(read.table("outputs/102/wang-ibs.covMat"))
@@ -462,14 +465,18 @@ covs<-eig$vectors[,1:3] %>% as_tibble() %>% bind_cols(pcm)
 text12<-covs %>% select(Run, Pop, V1, V2) %>%
   group_by(Pop) %>% summarize(Count=n(), x=mean(V1), y=mean(V2))
 
+covs$Population<-factor(covs$Pop, levels=c("AUW","AUE","PNG","INA","MAL","THA"))
 ggplot(covs) +
-  geom_point(aes(x=V1, y=V2, fill=Pop), pch=21, alpha=0.75) +
-  geom_text_repel(data=text12, aes(x=x, y=y, label=Pop), max.overlaps = Inf) +
+  geom_point(aes(x=V1, y=V2, fill=Population), pch=21, alpha=0.75, cex=2) +
+#  geom_text_repel(data=text12, aes(x=x, y=y, label=Pop), max.overlaps = Inf) +
   xlab(paste("PC1", " ", round((100*var[1]),2), "%", sep = "")) +
   ylab(paste("PC2", " ", round((100*var[2]),2), "%", sep = "")) +
   theme_bw() +
   theme(panel.grid=element_blank()) +
   scale_fill_viridis_d(option="H") 
+
+
+ggsave("outputs/102/12pcs.jpeg")
 ```
 
 Pretty much what we expected.    
